# Advent-Of-Code

./: .gitignore  .gitmodules  README.md  TODO.md
Advent-of-Code-2015/: README.md
Advent-of-Code-2015/day12/: Cargo.toml
Advent-of-Code-2015/day13/: Cargo.toml
Advent-of-Code-2015/day15/: Cargo.toml
Advent-of-Code-2015/day16/: Cargo.toml
Advent-of-Code-2015/day17/: Cargo.toml
Advent-of-Code-2015/day19/: Cargo.toml
Advent-of-Code-2015/day21/: Cargo.toml
Advent-of-Code-2015/day23/: Cargo.toml
Advent-of-Code-2015/day24/: Cargo.toml
Advent-of-Code-2015/day25/: Cargo.toml
Advent-of-Code-2015/day3/: Cargo.toml
Advent-of-Code-2015/day4/: Cargo.toml
Advent-of-Code-2015/day6/: Cargo.toml
Advent-of-Code-2015/day7/: Cargo.toml
Advent-of-Code-2015/day9/: Cargo.toml
Advent-of-Code-2016/: README.md
Advent-of-Code-2016/day1/: Cargo.toml
Advent-of-Code-2016/day10/: Cargo.toml
Advent-of-Code-2016/day11/: Cargo.toml
Advent-of-Code-2016/day12/: Cargo.toml
Advent-of-Code-2016/day14/: Cargo.toml
Advent-of-Code-2016/day15/: Cargo.toml
Advent-of-Code-2016/day17/: Cargo.toml
Advent-of-Code-2016/day18/: Cargo.toml
Advent-of-Code-2016/day19/: Cargo.toml
Advent-of-Code-2016/day2/: Cargo.toml
Advent-of-Code-2016/day20/: Cargo.toml
Advent-of-Code-2016/day21/: Cargo.toml
Advent-of-Code-2017/: README.md
Advent-of-Code-2018/: README.md
Advent-of-Code-2025/: README.md  clean_all.ps1
Advent-of-Code-2025/day10/: Cargo.toml
Advent-of-Code-2025/day10/src/: lib.rs  main.rs  part1.rs  part2.rs
templates/: README.md
templates/rust/: README.md
(+399 files in other folders)
