[package]
name = "day10"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"] }
dotenv = "*"
regex = "*"
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[dev-dependencies]
criterion = "*"

[[bench]]
name = "criterion"
harness = false
